calcul perfs rétrospective cu nouvel xgb

--- a/notebooks/training_xgboost.ipynb
+++ b/notebooks/training_xgboost.ipynb
@@ -36,11 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(data, model, features, target, window_size):\n",
+    "def train_model(data, model, features, target, window_size, test_size):\n",
     "      \n",
     "      # Initialiser les listes pour stocker les prédictions et les vraies valeurs\n",
     "      predictions = []\n",
     "      actuals = []\n",
+    "      scaler = StandardScaler()\n",
+    "\n",
+    "      # Initialiser l'ensemble d'entraînement\n",
+    "      X_train = features.iloc[:window_size, :]\n",
+    "      y_train = target.iloc[:window_size]\n",
     "\n",
     "      # Boucle à travers les données de la taille de la fenêtre jusqu'à la fin des données\n",
     "      for i in range(window_size, len(data) - 1):\n",
@@ -51,7 +56,7 @@
     "            y_test = target.iloc[i]\n",
     "\n",
     "            #Normaliser les données\n",
-    "            scaler = StandardScaler()\n",
+    "            \n",
     "            X_train = scaler.fit_transform(X_train)\n",
     "            X_test = scaler.transform(X_test)\n",
     "            \n",
@@ -64,6 +69,10 @@
     "            # Stocker les prédictions et les vraies valeurs\n",
     "            predictions.append(prediction)\n",
     "            actuals.append(y_test)\n",
+    "\n",
+    "            # Ajouter de nouvelles données à l'ensemble d'entraînement pour la prochaine itération\n",
+    "            X_train = features.iloc[:i + test_size, :]\n",
+    "            y_train = target.iloc[:i + test_size]\n",
     "\n",
     "      # Évaluer le modèle\n",
     "      accuracy = accuracy_score(actuals, predictions)\n",
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,10 +257,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def train_cumulative_model_save(data, model, features, target, window_size, test_size, n_days):\n",
+    "      # Initialiser les listes pour stocker les scores de performance\n",
+    "      performance_scores = []\n",
+    "\n",
+    "      # StandardScaler pour normaliser les features\n",
+    "      scaler = StandardScaler()\n",
+    "\n",
+    "      # Initialiser l'ensemble d'entraînement\n",
+    "      X_train = features.iloc[:window_size, :]\n",
+    "      y_train = target.iloc[:window_size]\n",
+    "\n",
+    "      # Listes pour stocker toutes les prédictions et progressions\n",
+    "      all_predictions = []\n",
+    "      all_progressions = []\n",
+    "\n",
+    "      # Boucle à travers les données, en augmentant la taille de l'ensemble d'entraînement à chaque itération\n",
+    "      for i in range(window_size, len(data) - test_size):\n",
+    "            # Diviser les données en ensembles d'entraînement et de test\n",
+    "            X_test = features.iloc[i:i + test_size, :]\n",
+    "            y_test = target.iloc[i:i + test_size]\n",
+    "\n",
+    "            # Normaliser les données\n",
+    "            X_train_scaled = scaler.fit_transform(X_train)\n",
+    "            X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "            # Entraîner le modèle\n",
+    "            model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "            # Faire des prédictions sur le jeu de test\n",
+    "            prediction = model.predict(X_test_scaled)[0]  # Prédiction pour un seul jour\n",
+    "            progression = data.iloc[i]['progression tomorrow'] + 1\n",
+    "\n",
+    "            all_predictions.append(prediction)\n",
+    "            all_progressions.append(progression)\n",
+    "\n",
+    "            # Appliquer la métrique si on a suffisamment de données\n",
+    "            if i >= window_size + n_days - 1:\n",
+    "                  score = earn_metric(all_predictions, all_progressions, n_days, i - window_size)\n",
+    "                  if score is not None:\n",
+    "                        performance_scores.append(score)\n",
+    "\n",
+    "            # Ajouter de nouvelles données à l'ensemble d'entraînement pour la prochaine itération\n",
+    "            X_train = features.iloc[:i + test_size, :]\n",
+    "            y_train = target.iloc[:i + test_size]\n",
+    "\n",
+    "            # Sauvegarder le modèle et le scaler dans un fichier\n",
+    "            model_filename = f'../models/xgboost_models/xgboost_{data.index[i]}.pkl'\n",
+    "            scaler_filename = f'../scalers/scaler_{data.index[i]}.pkl'\n",
+    "            pickle.dump(model, open(model_filename, 'wb'))\n",
+    "            pickle.dump(scaler, open(scaler_filename, 'wb'))\n",
+    "\n",
+    "      # Calculer la performance moyenne\n",
+    "      average_performance = np.mean(performance_scores)\n",
+    "\n",
+    "      # Sauvegarder le modèle et le scaler final\n",
+    "      pickle.dump(model, open('../models/final_model.pkl', 'wb'))\n",
+    "      pickle.dump(scaler, open('../scalers/final_scaler.pkl', 'wb'))\n",
+    "      pickle.dump(all_predictions, open('../stats/predictions.pkl', 'wb'))\n",
+    "      pickle.dump(all_progressions, open('../stats/progressions.pkl', 'wb'))\n",
+    "\n",
+    "\n",
+    "      return average_performance"
+   ]
   },
   {
    "cell_type": "code",
@@ -262,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +359,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Accuracy: 60.64%\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_model(data, xgboost, features, target, window_size, test_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -296,13 +385,13 @@
        "1.003973437273559"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_cumulative_model(data, xgboost, features, target, window_size, test_size, n_days)"
+    "train_cumulative_model_save(data, xgboost, features, target, window_size, test_size, n_days)"
    ]
   },
   {
